feat: update modal

--- a/desafio-front-end/src/styles/global.css
+++ b/desafio-front-end/src/styles/global.css
@@ -9,6 +9,8 @@
     --color-font-white:#fff; 
     --color-font-black:#1F2D30;    
     --color-modal-overlay: rgba(31, 45, 48,0.88);
+    --font-size-smallest: 14px;
+    --font-size-smaller: 20px;
     --font-size-small: 24px;
     --font-size-medium: 32px;
 }
