fix: fixing responsivity

--- a/desafio-front-end/src/styles/global.css
+++ b/desafio-front-end/src/styles/global.css
@@ -9,6 +9,7 @@
     --color-font-white:#fff;
     --color-font-black:#1F2D30;
     --color-modal-overlay: rgba(31, 45, 48,0.88);
+    --font-size-smallest2: 13px;
     --font-size-smallest: 14px;
     --font-size-smaller: 20px;
     --font-size-small: 24px;
